Visually Shows cards that have been used before

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   </head>
 
   <body>
+    <!-- Used Cards Display -->
+    <div id="used" class="sideBtn">View Used Cards</div>
+    <div id="remaining" class="sideBtn" style="margin-top: 35px;">
+      View Remaining Cards
+    </div>
+
+    <div class="viewCards">
+      <!-- Show Used Cards Here-->
+    </div>
+
     <div class="wrapper">
       <h1>Card-less Kings</h1>
 
