Adds toggle for viewing used Cards Plus Styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
       View Remaining Cards
     </div>
 
-    <div class="viewCards">
-      <!-- Show Used Cards Here-->
+    <div id="viewCardsWrap">
+      <div class="viewCards">
+        <!-- Show Used Cards Here-->
+        <button id="closeCards" class="btn">Close</button>
+      </div>
     </div>
 
     <div class="wrapper">
