--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <!-- Cards Remaining -->
+    <div class="numberCards">52</div>
+
     <!-- Used Cards Display -->
     <div id="used" class="sideBtn">View Used Cards</div>
     <div id="remaining" class="sideBtn" style="margin-top: 35px;">
