Remove card from array after it is used

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Stylesheets -->
-
     <link
       rel="stylesheet"
       href="styles/styles.css"
@@ -21,10 +20,7 @@
     <div class="numberCards">52</div>
 
     <!-- Used Cards Display -->
-    <div id="used" class="sideBtn">View Used Cards</div>
-    <div id="remaining" class="sideBtn" style="margin-top: 35px;">
-      View Remaining Cards
-    </div>
+    <div id="used" class="sideBtn">Cards</div>
 
     <div id="viewCardsWrap">
       <div class="viewCards">
@@ -35,11 +31,10 @@
 
     <div class="wrapper">
       <h1>Card-less Kings</h1>
-
       <button class="btn" id="randomize">Pick a Card</button>
 
       <div class="cards" id="cards">
-        <img src="images/home.png" alt="Card Image" id="card" />
+        <img src="images/home.png" alt="Standard Card" id="card" />
       </div>
 
       <p id="instructions" class="paragraph">Instructions</p>
