Show or Hide used cards

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     </div>
     
     <!-- Used Cards Display -->
-    <div id="used" class="sideBtn">Cards</div>
+    <div id="used" class="sideBtn">Hide used sards</div>
     <div id="viewCardsWrap">
       <div class="viewCards">
         <!-- Show Used Cards Here-->
-        <button id="closeCards" class="btn">Close</button>
       </div>
     </div>
 
