Style tweaks and wording

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- Cards Remaining -->
-    <div class="numberCards">52</div>
+    <div class="numberCards">Cards Remaining : 52</div>
 
     <div class="wrapper">
       <h1>Card-less Kings</h1>
@@ -31,7 +31,7 @@
     </div>
     
     <!-- Used Cards Display -->
-    <div id="used" class="sideBtn">Hide used sards</div>
+    <div id="used" class="sideBtn">Hide used cards</div>
     <div id="viewCardsWrap">
       <div class="viewCards">
         <!-- Show Used Cards Here-->
