Added back/home button

--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+	  <div id="back">Home</div>
     <!-- Cards Remaining -->
     <div class="numberCards">Cards Remaining : 52</div>
 
