--- a/settings.html
+++ b/settings.html
@@ -13,7 +13,7 @@
       type="text/css"
       media="screen"
     />
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
   </head>
 
   <body>
