--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
       media="screen"
     />
     <link rel="manifest" href="manifest.webmanifest">
+	 <link rel="manifest" href="manifest.json">
   </head>
 
   <body>
