Added ServiceWorker for Kings

--- a/settings.html
+++ b/settings.html
@@ -20,11 +20,17 @@
 	  <div id="back">Home</div>
     <!-- Cards Remaining -->
 
-    <div class="wrapper">
+    <div class="wrapper" style="height:700px;">
       <h1>Settings</h1>
-      <h2>Edit card rules for game</h2>
+      <h2>Edit each card's rule for the game</h2>
 
-      <p class="italic"> In progess - Coming soon </p>
+      <p class="italic">In progess - Coming soon</p>
     </div>
+	  
+	<script>
+	 back.addEventListener("click" , () => {
+	location.replace("index.html");
+}) 
+	 </script>  
   </body>
 </html>
