--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
       type="text/css"
       media="screen"
     />
-	  <link rel="manifest" href="manifest.json">
+	  <link rel="manifest" href="manifest.webmanifest">
   </head>
 
   <body>
@@ -117,5 +117,6 @@ function hideA2hs()
   var a2hsDiv = document.getElementById("homescreen_prompt");
   a2hsDiv.style.display = 'none'; 
 }
+</script>
   </body>
 </html>
