--- a/settings.html
+++ b/settings.html
@@ -20,11 +20,9 @@
 	  <div id="back">Home</div>
     <!-- Cards Remaining -->
 
-    <div class="wrapper">
+    <div class="settings_wrapper">
       <h1>Settings</h1>
       <h2>Edit card rules for game</h2>
-
-      <p class="italic"> In progess - Coming soon </p>
       
       <div id="editRules">
         
