Updated Styles, Added homepage king card

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<button id="settingsGame" class="home_btn">Settings</button>
 			<button id="rateGame" class="home_btn">Rate/Review</button>
 		</div>
-    </div>
+  </div>
+  
+  <div id="king_card"><img src="images/KH.png" alt="Kings"></div>
 
     <script src="scripts/index.js"></script>
 	  <script>
