--- a/settings.html
+++ b/settings.html
@@ -37,5 +37,6 @@
     })
     </script>
     <script src="scripts/settings.js"></script>
+	<script src="scripts/scripts.js"></script>	
   </body>
 </html>
