--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Card-less Kings</title>
+    <title>Cardless Kings</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -37,6 +37,6 @@
     })
     </script>
     <script src="scripts/settings.js"></script>
-	<script src="scripts/scripts.js"></script>	
+ 	<script src="scripts/scripts.js"></script>
   </body>
 </html>
