--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,15 @@
       media="screen"
     />
 	  <link rel="manifest" href="manifest.webmanifest">
+	  <meta property="og:title" content="Cardless Kings" />
+	  <meta property="og:description" content="Carldess version of the card game Kings">
+      <meta property="og:url" content="https://www.mattjlowe.com" />
+      <meta property="og:image" content="https://www.mattjlowe.com/icon512.png" />
+	  
+	  <meta name="twitter:title" content="Cardless Kings">
+	  <meta name="twitter:description" content="Carldess version of the card game Kings">
+	  <meta name="twitter:image" content=" http://www.mattjlowe.com/icon512.png">
+      <meta name="twitter:card" content="summary_large_image">
   </head>
 
   <body>
