Updated styles, added max width for many items

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="home_wrapper">
 			<h1>Kings</h1>
      	<div class="button_wrapper">
-			<button id="newGame" class="home_btn first_btn">New Game</button>
-			<button id="resumeGame" class="home_btn">Resume Game</button>
-			<button id="settingsGame" class="home_btn">Settings</button>
+			<button id="newGame" class="home_btn first_btn">New Game</button><br>
+			<button id="resumeGame" class="home_btn">Resume Game</button><br>
+			<button id="settingsGame" class="home_btn">Settings</button><br>
 			<button id="rateGame" class="home_btn">Rate/Review</button>
 		</div>
   </div>
