Updated general styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <meta name="twitter:card" content="summary_large_image">
   </head>
 
-  <body>
+  <body style="overflow:hidden;">
 	  <div id="homescreen_prompt" style="display: none;"></div>
 
     <div class="home_wrapper">
