Added new version for the serviceWorker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Cardless Kings</title>
+    <title>Card-less Kings</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -14,13 +14,13 @@
       media="screen"
     />
 	  <link rel="manifest" href="manifest.webmanifest">
-	  <meta property="og:title" content="Cardless Kings" />
-	  <meta property="og:description" content="Cardless version of the card game Kings">
+	  <meta property="og:title" content="Card-less Kings" />
+	  <meta property="og:description" content="Card-less version of the card game Kings">
       <meta property="og:url" content="https://www.mattjlowe.com" />
       <meta property="og:image" content="https://www.mattjlowe.com/icon512.png" />
 	  
-	  <meta name="twitter:title" content="Cardless Kings">
-	  <meta name="twitter:description" content="Cardless version of the card game Kings">
+	  <meta name="twitter:title" content="Card-less Kings">
+	  <meta name="twitter:description" content="Card-less version of the card game Kings">
 	  <meta name="twitter:image" content=" http://www.mattjlowe.com/icon512.png">
       <meta name="twitter:card" content="summary_large_image">
   </head>
