updated link to meta tag image

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 	  <link rel="manifest" href="manifest.webmanifest">
 	  <meta property="og:title" content="Card-less Kings" />
 	  <meta property="og:description" content="Card-less version of the card game Kings">
-      <meta property="og:url" content="https://www.mattjlowe.com" />
-      <meta property="og:image" content="https://www.mattjlowe.com/icon512.png" />
+    <meta property="og:url" content="https://www.mattjlowe.com/kings/" />
+    <meta property="og:image" content="https://www.mattjlowe.com/kings/icon152.png" />
 	  
 	  <meta name="twitter:title" content="Card-less Kings">
 	  <meta name="twitter:description" content="Card-less version of the card game Kings">
-	  <meta name="twitter:image" content=" http://www.mattjlowe.com/icon512.png">
-      <meta name="twitter:card" content="summary_large_image">
+	  <meta name="twitter:image" content=" http://www.mattjlowe.com/kings/icon152.png">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
 
   <body style="overflow:hidden;">
