Added disclaimer that settings will take effect in a new game

--- a/settings.html
+++ b/settings.html
@@ -32,7 +32,7 @@
     <div class="settings_wrapper">
       <h1>Settings</h1>
       <h2>Edit card rules for game</h2>
-      
+      <p class="italic">Changes will take effect once a new game is started.</p>
       <div id="editRules">
         
       </div>
